--- a/WSDCDraw.ipynb
+++ b/WSDCDraw.ipynb
@@ -441,9 +441,12 @@
     "            bestMatchedCountry = bestMatchedCountries[rd.randint(0,len(bestMatchedCountries) - 1)]\n",
     "            countrieslist.remove(bestMatchedCountry)\n",
     "            \n",
+    "            # BELLETJE BOAZ: BESLUIT OM HIER POWER DIFFERENTIAL UIT TE REKENEN\n",
+    "            \n",
     "            newPairing = pd.DataFrame({'nation': [countryOne, bestMatchedCountry],\n",
     "                                       'pairno': [pairCount, pairCount],\n",
-    "                                       'groupno': [groupno, groupno]})\n",
+    "                                       'groupno': [groupno, groupno]}\n",
+    "                                         'powerdif': [powerdif, powerdif])\n",
     "            pairTable = pd.concat([pairTable, newPairing])\n",
     "            \n",
     "    return(pairTable)"
@@ -491,6 +494,9 @@
     "            matchablePairs = attributesTable.loc[(attributesTable['groupno'] != groupNo) & \n",
     "                                                 (attributesTable['pairno'].isin(unmatchedPairs))]\n",
     "        \n",
+    "            # BELLETJE MET BOAZ: AANMAKEN KOLOM ABSOLUTE FOUTMARGE STRENGTH EN POWERDIF\n",
+    "            # OPTELLEN EN DAN MIN-FUNCTIE VOOR SELECTIE BESTE KANDIDAAT\n",
+    "            \n",
     "            pairStrength = attributesTable['strength'].loc[attributesTable['pairno'] == pairNumber].values[0]\n",
     "            bestMatchedStrength = min(matchablePairs['strength'].as_matrix(),\n",
     "                                      key=lambda x:abs(x-pairStrength))\n",
@@ -512,7 +518,8 @@
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -528,7 +535,9 @@
     "def generateDraw(blockTable):\n",
     "    \n",
     "    # The end result of this function is two tables: round 1 and round 2\n",
-    "    # Group 1 countries are prop in the first round\n"
+    "    # Group 1 countries are prop in the first round\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -1127,21 +1136,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
